# mimic_grasping

./: CMakeLists.txt  READE.md  README.md  package.xml
config/: charuco_detector.rviz  rviz.rviz
config/perception/: curvature_estimators.yaml  filters.yaml  filters_cad.yaml  filters_euclidean_clustering.yaml  filters_pca.yaml  filters_plane_segmentation.yaml  filters_roi.yaml  filters_voxel_grid.yaml  initial_pose_estimators_feature_matchers.yaml  initial_pose_estimators_point_matchers.yaml  keypoint_detectors.yaml  normal_estimators.yaml  outlier_detectors.yaml  pose_estimators_refined.yaml  transformation_aligner.yaml  transformation_validators.yaml
config/perception/old/: filters.yaml  filters_cad.yaml  filters_pca.yaml  filters_roi.yaml
config/photoneo/: phoxi_camera.yaml  phoxi_camera_camera_info_2019-04-003-LC3.yaml  phoxi_camera_camera_info_jEj-102.yaml
config/rs_435/: d435.json  d435_2.json  d435_90mw.json
docs/: test
include/object_recognition_client/: obj_localization_ros.h
launch/: object_recognition.launch  object_recognition_old.launch  or_usado_knee_tube  phoxi_camera.launch  point_cloud_publisher.launch  run.launch  run_photoneo_skill.launch  rviz.launch  save_point_cloud.launch  tfs.launch  tfs_pc_publisher.launch
launch/sensors/: phoxi_camera.launch  point_cloud_publisher.launch  realsense_d435.launch
launch/support_tools/: charuco_detector_photoneo.launch  charuco_detector_rs435.launch  charuco_detector_standalone.launch
launch/tfs/: tfs_pc_publisher.launch  tfs_photoneo.launch  tfs_rsd435.launch
models/: bearing_holder.ply  cover_plate.ply  falange_piece.ply  knee_tube.STL  knee_tube2.ply  meshlab_filters.mlx  meshlab_filters_2.mlx  rod.ply  rod_2x.ply
robot_codes/mimic_grasping_get_frames_pose/: MainModule.mod
src/: node.cpp
