<?xml version="1.0"?>
<package format="2">
  <name>mimic_grasping_ros_interface_package</name>
  <version>0.0.0</version>
  <description>
    This package allows the mimic_grasping_server to communicate with ROS pipelines.
    This is a multipurpose wrapper package.
  </description>
  <maintainer email="joao.p.souza@inesctec.pt">joaopedro</maintainer>
  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>object_recognition_skill_server</build_depend>
  <!--build_depend>photoneo_skill_server</build_depend-->
  <build_depend>point_cloud_io</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--build_depend>zed_wrapper</build_depend-->
  <build_export_depend>object_recognition_skill_server</build_export_depend>
  <!--build_export_depend>photoneo_skill_server</build_export_depend-->
  <build_export_depend>point_cloud_io</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <!--build_export_depend>zed_wrapper</build_export_depend-->
  <exec_depend>object_recognition_skill_server</exec_depend>
  <!--exec_depend>photoneo_skill_server</exec_depend-->
  <exec_depend>point_cloud_io</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!--exec_depend>zed_wrapper</exec_depend-->

</package>
